--- a/.github/workflows/MikroTikV6_Gfwlist_Scripts.yml
+++ b/.github/workflows/MikroTikV6_Gfwlist_Scripts.yml
@@ -2,7 +2,7 @@ name: MikroTikV6_Gfwlist_Scripts
 
 on:
   schedule:
-    - cron: "0 0 * * 1" # Run every Monday at 00:00 UTC
+    - cron: "10 0 * * *" # Run every Monday at 00:00 UTC
   workflow_dispatch:
 
 permissions:
